--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-token-auth": "^2.3.8",
     "web-vitals": "2.1.4"
   },
+  "proxy": "http://localhost:8000",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
